fixing settings tab

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -17,7 +17,7 @@
             <span matListItemTitle>Dashboard</span>
           </a>
           
-          <a mat-list-item routerLink="/setup" routerLinkActive="active">
+          <a mat-list-item routerLink="/settings" routerLinkActive="active">
             <mat-icon matListItemIcon>settings</mat-icon>
             <span matListItemTitle>Settings</span>
           </a>
