fixing settings tab

--- a/frontend/src/app/features/analyzer/components/size-analysis/size-analysis.component.scss
+++ b/frontend/src/app/features/analyzer/components/size-analysis/size-analysis.component.scss
@@ -557,7 +557,7 @@
 
     .quality-tier {
       font-size: 0.7rem;
-      color: #666;
+      color: var(--text-secondary);
     }
 
     .upgrade-icon {
